# derp

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: __init__.py  __main__.py  bench_compile.py  bench_fullstack.py  bench_hydration.py  bench_load.py  bench_queries.py  bench_query_building.py  bench_sqlalchemy.py  bench_tortoise.py  conftest.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: ai.rst  auth.rst  config.rst  derp.rst  index.rst  kv.rst  orm.rst  orm_engine.rst  orm_fields.rst  orm_query.rst  payments.rst  queue.rst  storage.rst
docs/examples/: messaging.rst
docs/guide/: ai.rst  auth.rst  cli.rst  client.rst  config.rst  kv.rst  orm.rst  payments.rst  queue.rst  storage.rst
examples/messaging/: .env  .env.example  README.md  derp.toml  services.sh
examples/messaging/app/: __init__.py  config.py  dependencies.py  main.py  models.py  schemas.py
examples/messaging/app/routers/: auth.py  channels.py  conversations.py  users.py  workspaces.py
examples/messaging/migrations/: _journal.json  journal.json
examples/messaging/migrations/0000_migration/: down.sql  migration.sql  snapshot.json
examples/messaging/migrations/0001_migration/: down.sql  migration.sql  snapshot.json
examples/messaging/migrations/0002_migration/: migration.sql  snapshot.json
examples/messaging/migrations/_introspected/: snapshot.json
examples/messaging/static/: app.js  index.html  styles.css
scripts/: build_package.sh
src/derp/: __init__.py  config.py  derp_client.py
src/derp/ai/: __init__.py  client.py  exceptions.py  models.py
src/derp/auth/: __init__.py  base.py  clerk_client.py  client.py  cognito_client.py  config.py  email.py  exceptions.py  jwt.py  models.py  native_client.py  password.py  supabase_client.py  tokens.py  workos_client.py
src/derp/auth/email_templates/: base.html  confirmation.html  magic_link.html  recovery.html
src/derp/auth/fastapi/: __init__.py  dependencies.py  middleware.py  router.py  schemas.py
src/derp/auth/providers/: __init__.py  base.py  github.py  google.py
src/derp/cli/: __init__.py  config.py  main.py
src/derp/cli/commands/: check.py  drop.py  generate.py  migrate.py  pull.py  push.py  rollback.py  status.py  studio.py
src/derp/kv/: __init__.py  base.py  client.py  errors.py  serializers.py  valkey.py
src/derp/migrations/: __init__.py  journal.py  safety.py
src/derp/migrations/convertors/: __init__.py  base.py  column.py  constraint.py  enum.py  index.py  policy.py  role.py  schema.py  sequence.py  table.py
src/derp/migrations/introspect/: __init__.py  postgres.py
src/derp/migrations/snapshot/: __init__.py  differ.py  serializer.py
src/derp/migrations/statements/: __init__.py  types.py
src/derp/orm/: __init__.py  config.py  engine.py  expression_base.py  fields.py  index.py  loader.py  router.py  schema.py  table.py
src/derp/orm/column/: base.py  types.py
src/derp/orm/migrations/: __init__.py  filters.py  journal.py  safety.py
src/derp/orm/migrations/convertors/: __init__.py  base.py  column.py  constraint.py  enum.py  index.py  policy.py  role.py  schema.py  sequence.py  table.py
src/derp/orm/query/: __init__.py  builder.py  expressions.py  returning.py  table_ref.py
src/derp/payments/: __init__.py  client.py  exceptions.py  models.py
src/derp/queue/: __init__.py  base.py  celery.py  exceptions.py  vercel.py
src/derp/storage/: __init__.py  client.py  config.py  exceptions.py
src/derp/studio/: server.py
src/derp/studio/ui/: components.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/dribble/: __init__.py  engine.py  fields.py  schema.py  table.py
src/dribble/cli/: __init__.py  main.py
src/dribble/query/: __init__.py  builder.py  expressions.py  types.py
tests/: __init__.py  conftest.py  test_ai.py  test_cli.py  test_config.py  test_convertors.py  test_differ.py  test_fields.py  test_query.py  test_snapshot.py  test_storage.py  test_table.py
tests/auth/: conftest.py  test_client.py  test_cognito.py  test_jwt.py  test_organizations.py  test_password.py  test_providers.py  test_supabase.py  test_workos.py
tests/client/: conftest.py  test_backend_flow.py  test_lifecycle.py
tests/idempotency/: test_idempotency.py
tests/kv/: test_guarded_get.py  test_valkey.py  test_valkey_cluster.py
tests/orm/: test_aggregates.py  test_cli.py  test_convertors.py  test_differ.py  test_fields.py  test_loader.py  test_normalize.py  test_query.py  test_query_extended.py  test_router.py  test_snapshot.py  test_studio.py  test_subqueries.py  test_table.py  test_table_ref.py  test_types.py
tests/payments/: __init__.py  conftest.py  test_client.py
tests/queue/: test_celery.py  test_schedules.py  test_vercel.py
(+37 files in other folders)
