[project]
name = "derp"
version = "0.1.0"
description = "A strongly-typed async Python ORM for PostgreSQL inspired by Drizzle ORM and SQLModel"
readme = "README.md"
authors = [{ name = "hilly12", email = "aahilmehta12@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "typer>=0.15",
    "etils>=1.13.0",
    "aiobotocore>=2.12.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.0",
    "stripe[async]>=13.0.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
derp = "derp.cli.main:app"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = ["src/derp"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "testing-postgresql>=1.3.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "valkey-glide",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
