[project]
name = "derp-py"
version = "0.2.1"
description = "An async Python backend toolkit for building web apps."
readme = "README.md"
authors = [{ name = "hilly12", email = "aahilmehta12@gmail.com" }]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "typer>=0.15",
    "etils>=1.13.0",
    "aiobotocore>=2.12.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "argon2-cffi>=23.1.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.0",
    "stripe[async]>=13.0.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
derp = "derp.cli.main:app"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = ["src/derp"]

[tool.uv.build-backend]
module-name = "derp"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "valkey-glide",
    "celery>=5.6.2",
    "clerk-backend-api>=5.0.2",
]
benchmark = [
    "sqlalchemy[asyncio]>=2.0",
    "tortoise-orm>=0.22",
]

[dependency-groups]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.0",
    "testing-postgresql>=1.3.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "valkey-glide",
    "celery>=5.6.2",
    "clerk-backend-api>=5.0.2",
    "moto[cognitoidp,server]>=5.1.22",
]
benchmark = [
    "sqlalchemy[asyncio]>=2.0",
    "tortoise-orm>=0.22",
]

[tool.ty.rules]
# Varchar[255], Numeric[10, 2], Vector[1536] use int literals in type annotations
# which is non-standard but works at runtime via __class_getitem__
invalid-type-form = "ignore"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/derp/orm/query/builder.py" = ["E501"]
"src/derp/orm/query/returning.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
